feat(core): integrate Spring AI Alibaba codegen
- Refactor AI service factory and routing logic
- Implement token streaming and callback registry
- Update AI model enums and chat frontend
- Add system prompts, test controller, and design docs